--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 alembic==1.13.1
 azure-common==1.1.28
 pyopenssl==24.0.0
-azure-storage-blob==2.1.0
+azure-common==1.1.23
+azure-core==1.0.0
+azure-nspkg==3.0.2
+azure-storage==0.36.0
 certifi==2024.2.2
 cffi==1.16.0
 chardet==5.2.0
